# BinDiffSynchronizer

./: .gitignore  BinDiffSynchronizer.h  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  PageDevice.h  StaticPageDevice.h  analysis.md  go-migration-analysis.md  jhub-tz.md  main.cpp  main.vcproj  main.vcxproj  main2008.sln  pallocator.h  pam.h  pam_core.h  persist.h  persistent_json_analysis.md  phase1-plan.md  phase2-plan.md  phase3-plan.md  pjson.h  pjson_interning.h  pjson_node.h  pjson_node_pool.h  pjson_serializer.h  plan.md  pmap.h  pmem_array.h  pstring.h  pstringview.h  pvector.h  readme.md
.github/workflows/: ci.yml
experiments/: CMakeLists.txt  benchmark_persist_vs_std.cpp  benchmark_persist_vs_std_results.md  benchmark_persistent_vs_cbor.cpp  debug_pjson.cpp  study_basic_json_params.cpp  test_json_size.cpp  test_persist_std.cpp  test_roundtrip_debug.cpp
experiments/go-poc/: go.mod  main.go
jgit/: commit.h  hash.h  object_store.h  persistent_array.h  persistent_array_adapter.h  persistent_basic_json.h  persistent_json_store.h  persistent_json_value.h  persistent_map.h  persistent_map_adapter.h  persistent_string.h  refs.h  repository.h  serialization.h
tests/: CMakeLists.txt  test_address_manager.cpp  test_bugs.cpp  test_cache.cpp  test_commit.cpp  test_fptr.cpp  test_hash.cpp  test_memory_device.cpp  test_object_store.cpp  test_pallocator.cpp  test_pam.cpp  test_pam_dynamic.cpp  test_pam_metrics.cpp  test_pam_perf.cpp  test_persist.cpp  test_persist_core.cpp  test_persist_json.cpp  test_persist_json_final.cpp  test_persist_persistent_json_value.cpp  test_persist_persistent_map.cpp  test_persist_persistent_string.cpp  test_persist_std.cpp  test_persistent_array.cpp  test_persistent_json_store.cpp  test_persistent_json_store_integration.cpp  test_persistent_json_store_v2.cpp  test_persistent_json_value.cpp  test_persistent_map.cpp  test_persistent_string.cpp  test_persistent_string_extended.cpp  test_phase3_integration.cpp  test_pjson.cpp  test_pjson_bench.cpp  test_pjson_large.cpp  test_pjson_node.cpp  test_pjson_opt.cpp  test_pjson_serial.cpp  test_pmap.cpp  test_pmem_array.cpp  test_pstring.cpp  (+6 more)
utils/: Protocol.h  str_switch.h  string_type.h  type_map.h
